[package]
name = "fc-rpc"
authors = ['Clover Network <https://github.com/clover-network>']
edition = '2018'
license = 'GPL-3.0'
homepage = 'https://cloverdefi.com'
repository = 'https://github.com/clover-network/clover'
version = '0.9.0'

[dependencies]
jsonrpc-core = "15.0.0"
jsonrpc-derive = "14.0.3"
jsonrpc-core-client = "14.0.3"
jsonrpc-pubsub = "15.0.0"
log = "0.4.8"
ethereum-types = "0.10.0"
fc-consensus = { path = "../consensus" }
fc-rpc-core = { path = "../rpc-core" }
fp-rpc = { path = "../../../primitives/rpc" }
sp-io = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-runtime = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-api = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-storage = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-service = { version = "0.8.0" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-rpc = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1"  }
sc-network = { version = "0.8.0" }
frame-support = { git = "https://github.com/paritytech/substrate.git",  branch = "rococo-v1" , default-features = false }
clover-evm = { path = "../../../modules/clover-evm" }
clover-ethereum = { path = "../../../modules/clover-ethereum" }
ethereum = { version = "0.5.1", features = ["with-codec"] , path ="../../../modules/ethereum"}
codec = { package = "parity-scale-codec", version = "1.3" }
rlp = "0.5"
futures = { version = "0.3.1", features = ["compat"] }
sha3 = "0.8"
rustc-hex = { version = "2.1.0", default-features = false }
libsecp256k1 = "0.3"
rand = "0.7"